apps/nginx/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-app
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/component: web-server
